@@ -1,3 +1,7 @@
+2007-05-03 Eric Saunders <saunders@astro.ex.ac.uk>
+
+	* etc/adaptive_vs_scheduler.csh: Commit of startup script
+
 2007-05-02 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * www/robonet-1.0/cgi-bin/scoring.cgi: New network status web page.
